--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <pittest.version>1.1.5</pittest.version>
         <junit4.version>4.13.1</junit4.version>
         <junit5.version>5.7.0</junit5.version>
+        <hamcrest.version>1.3</hamcrest.version>
     </properties>
     <dependencies>
         <dependency>
@@ -54,6 +55,12 @@
             <groupId>org.codehaus.mojo</groupId>
             <artifactId>findbugs-maven-plugin</artifactId>
             <version>3.0.5</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-all</artifactId>
+            <version>${hamcrest.version}</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
