--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <junit4.version>4.13.1</junit4.version>
         <junit5.version>5.7.0</junit5.version>
         <hamcrest.version>1.3</hamcrest.version>
+        <powermock.version>2.0.2</powermock.version>
     </properties>
     <dependencies>
         <dependency>
@@ -42,13 +43,13 @@
         <dependency>
             <groupId>org.powermock</groupId>
             <artifactId>powermock-module-junit4</artifactId>
-            <version>1.6.2</version>
+            <version>${powermock.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.powermock</groupId>
-            <artifactId>powermock-api-mockito</artifactId>
-            <version>1.6.2</version>
+            <artifactId>powermock-api-mockito2</artifactId>
+            <version>${powermock.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
