--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
         <junit5.version>5.7.0</junit5.version>
         <hamcrest.version>1.3</hamcrest.version>
         <powermock.version>2.0.2</powermock.version>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
     </properties>
     <dependencies>
         <dependency>
@@ -78,8 +80,8 @@
                 <version>3.1</version>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>11</source>
-                    <target>11</target>
+                    <source>${maven.compiler.source}</source>
+                    <target>${maven.compiler.target}</target>
                     <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
